# AdventOfCode

./: .gitignore  .python-version  CMakeLists.txt  Makefile  day_2.py  day_3  day_3.py  pyproject.toml  test.txt
aoc/: day_0.py  day_1.py  day_10.py  day_11.py  day_12.cpp  day_12.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  template.py  tools.py
dat/: day_13_test.txt  day_15.txt  day_18_test.txt  day_19_test.txt  day_3_test.txt  day_6_test.txt
notes/: day_8.csv
python/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_19_ex.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
src/: 2020_day_1.jl  Makefile  day_1.c  day_1.jl  day_10.jl  day_11.jl  day_12.jl  day_13.jl  day_14.jl  day_15.jl  day_16.jl  day_2.cpp  day_2.jl  day_3.c  day_3.cpp  day_3.jl  day_4.cpp  day_4.jl  day_5.cpp  day_5.jl  day_6.cpp  day_6.jl  day_7.cpp  day_7.jl  day_8.cpp  day_8.jl  day_9.cpp  day_9.jl  test.txt  testing  testing.cpp
tests/: test_all_days.py
