[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "My Advent of Code solutions."
authors = ["Dylan Gatlin <dgatlin5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pytest = "^7.2.0"
asyncclick = "^8.1.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
