[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "My Advent of Code solutions."
authors = ["Dylan Gatlin <dgatlin5@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26"
pytest = "^7.4.3"
asyncclick = "^8.1.3.4"
astropy = "^6.0.0"
rich = "^13.7.0"
PyYAML = "^6.0.1"
anyio = "^4.1.0"
ipython = "^8.18.1"
black = "^23.11.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"


[tool.black]
target-version=["py312"]
line-length = 88
